# usb-driver-fuzzing-thesis

./: .gitignore  AGENTS.md  README.md  compose.yaml
.devcontainer/: devcontainer.json
docker/: Dockerfile  Dockerfile.esp32c3
docs/: ARCHITECTURE.md  composite_msc_experiment_plan.md  control_plane_minimal_plan.md  esp32c3_build.md  experiment_methodology.md  experiment_scope_and_case_matrix.md  flash_layout.md  msc_experiment_plan.md  practice_plan.md  protocol.md  protocol_future_notes.md  remote_linux_baseline_matrix.md  remote_linux_baseline_result.md  remote_linux_workflow.md  rf_bootloader_minimal_plan.md  rf_bootloader_usage.md  test_procedure_rf_roundtrip.md  usb_case_firmware.md  usb_logging_radio_context_full.md
docs/adr/: 0002-two-wire-formats-one-logical-protocol.md
docs/milestones/: rf_roundtrip_baseline.md
docs/results/: 010_device_blength_too_short_01.md  011_device_blength_too_long_01.md  012_device_unknown_class_01.md  013_device_zero_vid_pid_01.md  020_config_wtotallength_too_small_01.md  021_config_wtotallength_too_large_01.md  022_config_bnuminterfaces_mismatch_01.md  030_interface_class_invalid_01.md  031_endpoint_wmaxpacketsize_zero_01.md  032_endpoint_direction_mismatch_01.md  040_string_invalid_length_01.md  041_string_missing_index_01.md  050_msc_baseline_01.md  050_msc_baseline_repeat_01.md  051_msc_zero_block_size_01.md  052_msc_zero_capacity_01.md  053_msc_huge_capacity_01.md  054_msc_read_capacity_short_response_01.md  055_msc_inquiry_invalid_length_01.md  056_msc_csw_invalid_status_01.md  057_msc_stall_on_read10_01.md  058_msc_endpoint_packet_size_zero_01.md  059_msc_bot_residue_mismatch_01.md  060_composite_cdc_msc_baseline_01.md  061_composite_hid_msc_baseline_01.md  062_composite_duplicate_interface_number_01.md  063_composite_duplicate_endpoint_address_01.md  064_composite_iad_mismatch_01.md  065_composite_bnuminterfaces_too_many_01.md  066_composite_bnuminterfaces_too_few_01.md  linux_case_summary.md  linux_msc_summary.md
experiments/: README.md
experiments/cases/: 000_baseline_cdc.json  001_baseline_hid_no_input.json  002_baseline_composite_cdc_hid.json  010_device_blength_too_short.json  011_device_blength_too_long.json  012_device_unknown_class.json  013_device_zero_vid_pid.json  020_config_wtotallength_too_small.json  021_config_wtotallength_too_large.json  022_config_bnuminterfaces_mismatch.json  030_interface_class_invalid.json  031_endpoint_wmaxpacketsize_zero.json  032_endpoint_direction_mismatch.json  040_string_invalid_length.json  041_string_missing_index.json  050_msc_baseline.json  051_msc_zero_block_size.json  052_msc_zero_capacity.json  053_msc_huge_capacity.json  054_msc_read_capacity_short_response.json  055_msc_inquiry_invalid_length.json  056_msc_csw_invalid_status.json  057_msc_stall_on_read10.json  058_msc_endpoint_packet_size_zero.json  059_msc_bot_residue_mismatch.json  060_composite_cdc_msc_baseline.json  061_composite_hid_msc_baseline.json  062_composite_duplicate_interface_number.json  063_composite_duplicate_endpoint_address.json  064_composite_iad_mismatch.json  065_composite_bnuminterfaces_too_many.json  066_composite_bnuminterfaces_too_few.json  README.md
experiments/results/: README.md  summary_template.csv
experiments/templates/: result_template.md
firmware/: CMakeLists.txt
firmware/esp32c3_bridge/: CMakeLists.txt  esp32_bootloader_spam.py  esp32_send_bootloader.py  esp32_send_bootloader_safe.py  sdkconfig.defaults
firmware/esp32c3_bridge/main/: CMakeLists.txt  bridge_uart.c  bridge_uart.h  main.c  nrf24_drv.c  nrf24_drv.h
firmware/include/: command_dispatch.h  crc8.h  log_types.h  mode_manager.h  nrf24_radio.h  protocol.h  rf_frame_v2.h  rf_test_packet.h  scenario_types.h  scheduler.h  status.h  tusb_config.h  usb_case_config.h  usb_case_descriptor_layer.h  watchdog_guard.h
firmware/src/: command_dispatch.c  crc8.c  main.c  mode_manager.c  nrf24_radio.c  scheduler.c  status.c  usb_case_descriptor_layer.c  usb_case_main.c  watchdog_guard.c
host_console/: console.py
host_console/protocol/: log_decoder.py  packets.py  rf_frame_v2.py
host_console/tools/: test_rf_frame_v2.py
host_console/transport/: serial_bridge.py
logs/runs/: 20260516_041440_010_device_blength_too_short_01.quick_analysis.txt  20260516_045009_011_device_blength_too_long_01.quick_analysis.txt  20260516_045510_011_device_blength_too_long_01.quick_analysis.txt  20260516_050224_012_device_unknown_class_01.quick_analysis.txt  20260516_050744_013_device_zero_vid_pid_01.quick_analysis.txt  20260516_163059_020_config_wtotallength_too_small_01.quick_analysis.txt  20260516_164141_021_config_wtotallength_too_large_01.quick_analysis.txt  20260516_170237_022_config_bnuminterfaces_mismatch_01.quick_analysis.txt  20260516_171427_030_interface_class_invalid_01.quick_analysis.txt  20260516_175202_031_endpoint_wmaxpacketsize_zero_01.quick_analysis.txt  20260516_180044_032_endpoint_direction_mismatch_01.quick_analysis.txt  20260516_181739_040_string_invalid_length_01.quick_analysis.txt  20260516_182707_041_string_missing_index_01.quick_analysis.txt  README.md  (+22 more)
tools/: build-container.sh  codex-analyze-log.sh  flash-esp32-from-wsl.sh  flash-from-wsl.sh  flash-linux.sh  flash-windows.ps1  gen_usb_case_config.py  git-commit-case-artifacts.sh  rf-bootloader-from-wsl.sh  run-linux-case-pipeline.sh  run-remote-linux-case.sh  run-with-log.sh  shell.sh  summarize_usb_results.py  validate_usb_cases.py
(+318 files in other folders)
